fix alignment final

--- a/style.css
+++ b/style.css
@@ -62,5 +62,7 @@ code {
 }
 
 #footer {
+    display: block;
+    width: 100%;
     text-align: center;
 }
